--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@
 
 # Editor config
 .editorconfig
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
