--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "auxilium",
   "packageManager": "yarn@4.6.0",
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4"
+    "@biomejs/biome": "^1.9.4",
+    "@playwright/experimental-ct-react": "^1.52.0",
+    "@playwright/test": "^1.52.0",
+    "@types/node": "^22.15.18"
   },
   "scripts": {
     "lint": "biome check ./src",
-    "format": "biome format ./src"
+    "format": "biome format ./src",
+    "test": "playwright test -c playwright-ct.config.ts"
   }
 }
