--- a/package.json
+++ b/package.json
@@ -6,11 +6,25 @@
     "@playwright/experimental-ct-react": "^1.52.0",
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.18",
-    "typescript": "^5.8.3"
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "@vitejs/plugin-react": "^4.4.1",
+    "jsdom": "^26.1.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vitest": "^3.1.3"
+  },
+  "dependencies": {
+    "@porsche-design-system/components-react": "^3.27.3",
+    "openai": "^4.98.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "scripts": {
     "lint": "biome check ./src",
-    "format": "biome format ./src",
-    "test": "playwright test -c playwright-ct.config.ts"
+    "format": "biome format --write ./src",
+    "test": "playwright test -c playwright-ct.config.ts",
+    "dev": "vite",
+    "build": "tsc -b && vite build"
   }
 }
